// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout/Article Default smoke-test 1`] = `
<div class="bg-slate-100 dark:bg-slate-900 text-slate-900 dark:text-slate-300">
  <div class="container mx-auto py-5 px-3">
    <div class="flex flex-col md:flex-row mb-5 gap-5 md:items-stretch">
      <div class="basis-1/3">
        <div class>
          <img alt
               fetchpriority="high"
               width="500"
               height="500"
               decoding="async"
               data-nimg="1"
               class="border-2 border-slate-500 mb-5 bg-white"
               srcset="https://loremflickr.com/2786/1145?lock=4965801977211120&amp;w=640&amp;q=75 1x, https://loremflickr.com/2786/1145?lock=4965801977211120&amp;w=1080&amp;q=75 2x"
               src="https://loremflickr.com/2786/1145?lock=4965801977211120&amp;w=1080&amp;q=75"
               style="color: transparent;"
          >
          <div class="md:sticky md:top-5">
            <h1>
              Title
            </h1>
            <span class="hidden md:block">
              <a class="border-2 border-slate-500 uppercase font-bold bg-white dark:bg-slate-900 px-4 py-2 text-slate-800 dark:text-slate-200 hover:bg-slate-100 dark:hover:bg-slate-800 hover:text-black dark:hover:text-white"
                 href="/"
              >
                « Home
              </a>
            </span>
          </div>
        </div>
      </div>
      <div class="w-full">
        <p>
          Curo vomer stillicidium denique cruciamentum conicio suspendo decens.
        </p>
        <p>
          Cubicularis taceo auctor. Exercitationem exercitationem reiciendis ulciscor.
        </p>
        <p>
          Perferendis suppono commodi conturbo calco claudeo quos aliquam. Curvo depulso cursim color cursim varietas. Desipio quia ancilla comes cuppedia usitas casso denuncio voro earum.
        </p>
        <p>
          Animi trepide pax impedit conicio cognomen cur. Utique dolore sortitus occaecati quibusdam spero turbo agnosco. Careo autem mollitia allatus vae quis supra acceptus paens. Articulus argumentum sub comis stultus iste creta.
        </p>
        <p>
          Turba contabesco adimpleo cogo cubicularis sufficio vulnero constans tempus optio. Arcus cubitum caput coniecto dolores sophismata amiculum aperte. Solvo tyrannus ipsum ultra creo. Considero assumenda tricesimus confido ipsam. Enim abbas voveo ventosus beatus clarus eius.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Layout/Article NoChildren smoke-test 1`] = `
<div class="bg-slate-100 dark:bg-slate-900 text-slate-900 dark:text-slate-300">
  <div class="container mx-auto py-5 px-3">
    <div class="flex flex-col md:flex-row mb-5 gap-5 md:items-stretch">
      <div class="basis-1/3">
        <div class>
          <img alt
               fetchpriority="high"
               width="500"
               height="500"
               decoding="async"
               data-nimg="1"
               class="border-2 border-slate-500 mb-5 bg-white"
               srcset="https://loremflickr.com/2707/862?lock=6681183921539698&amp;w=640&amp;q=75 1x, https://loremflickr.com/2707/862?lock=6681183921539698&amp;w=1080&amp;q=75 2x"
               src="https://loremflickr.com/2707/862?lock=6681183921539698&amp;w=1080&amp;q=75"
               style="color: transparent;"
          >
          <div class="md:sticky md:top-5">
            <h1>
              Title
            </h1>
            <span class="hidden md:block">
              <a class="border-2 border-slate-500 uppercase font-bold bg-white dark:bg-slate-900 px-4 py-2 text-slate-800 dark:text-slate-200 hover:bg-slate-100 dark:hover:bg-slate-800 hover:text-black dark:hover:text-white"
                 href="/"
              >
                « Home
              </a>
            </span>
          </div>
        </div>
      </div>
      <div class="w-full">
      </div>
    </div>
  </div>
</div>
`;

exports[`Layout/Article NoImage smoke-test 1`] = `
<div class="bg-slate-100 dark:bg-slate-900 text-slate-900 dark:text-slate-300">
  <div class="container mx-auto py-5 px-3">
    <div class="flex flex-col md:flex-row mb-5 gap-5 md:items-stretch">
      <div class="basis-1/3">
        <div class>
          <div class="md:sticky md:top-5">
            <h1>
              Title
            </h1>
            <span class="hidden md:block">
              <a class="border-2 border-slate-500 uppercase font-bold bg-white dark:bg-slate-900 px-4 py-2 text-slate-800 dark:text-slate-200 hover:bg-slate-100 dark:hover:bg-slate-800 hover:text-black dark:hover:text-white"
                 href="/"
              >
                « Home
              </a>
            </span>
          </div>
        </div>
      </div>
      <div class="w-full">
        <p>
          Thermae bellicus decipio sumo cunctatio aufero volaticus soleo uredo.
        </p>
        <p>
          Cenaculum desipio aegre. Capillus corrumpo benigne amiculum candidus coerceo reiciendis cicuta conturbo abscido.
        </p>
        <p>
          Explicabo arx patria clarus ratione. Valens acceptus antepono. Adipisci sum volup ut sulum vitae curtus uterque constans.
        </p>
        <p>
          Arcesso vilicus tristis tyrannus anser patior acceptus supplanto absens ago. Utique convoco harum minus. Mollitia solvo coadunatio curatio. Vicissitudo ocer vinum iure desino abduco.
        </p>
        <p>
          Vestigium avarus admoveo cum corroboro umquam. Verumtamen stabilis ventito. Tonsor condico consectetur cribro temeritas corporis carbo. Ver conscendo rem certus basium conduco compello vaco traho sui. Curo caries angulus coerceo arbustum aliquam pax convoco maiores aureus.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Layout/Article NoImageNoTitle smoke-test 1`] = `
<div class="bg-slate-100 dark:bg-slate-900 text-slate-900 dark:text-slate-300">
  <div class="container mx-auto py-5 px-3">
    <div class="flex flex-col md:flex-row mb-5 gap-5 md:items-stretch">
      <div class="basis-1/3">
      </div>
      <div class="w-full">
        <p>
          Conculco illo suasoria verecundia nobis candidus tamen.
        </p>
        <p>
          Averto tracto delego tergum capio concedo viriliter solus terebro. Bardus deludo tolero spero absconditus alias conor vinco.
        </p>
        <p>
          Centum contra bene curiositas blandior tutis. Cibus vicissitudo comburo verbera adimpleo suffragium. Decor adfectus adhaero concedo vinitor quae.
        </p>
        <p>
          Perspiciatis basium asper conturbo urbanus. Clibanus virga totam commodi voluptas votum cunabula. Cultura causa agnitio celer cernuus cubitum audacia viriliter. Quibusdam decimus curriculum.
        </p>
        <p>
          Ustilo cicuta accusator versus urbs. Eos amitto aliquid tui cunae. Villa caries abutor acidus sui vesper deleo corrupti. Unde solio candidus teres appono asperiores placeat. Sufficio consectetur chirographum vulticulus.
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Layout/Article Offset smoke-test 1`] = `
<div class="bg-slate-100 dark:bg-slate-900 text-slate-900 dark:text-slate-300">
  <div class="container mx-auto py-5 px-3">
    <div class="flex flex-col md:flex-row mb-5 gap-5 md:items-stretch">
      <div class="basis-1/3">
        <div class="-mt-10 md:-mt-20 h-full">
          <img alt
               fetchpriority="high"
               width="500"
               height="500"
               decoding="async"
               data-nimg="1"
               class="border-2 border-slate-500 mb-5 bg-white"
               srcset="https://loremflickr.com/3607/3934?lock=5083294350838433&amp;w=640&amp;q=75 1x, https://loremflickr.com/3607/3934?lock=5083294350838433&amp;w=1080&amp;q=75 2x"
               src="https://loremflickr.com/3607/3934?lock=5083294350838433&amp;w=1080&amp;q=75"
               style="color: transparent;"
          >
          <div class="md:sticky md:top-5">
            <h1>
              Title
            </h1>
            <span class="hidden md:block">
              <a class="border-2 border-slate-500 uppercase font-bold bg-white dark:bg-slate-900 px-4 py-2 text-slate-800 dark:text-slate-200 hover:bg-slate-100 dark:hover:bg-slate-800 hover:text-black dark:hover:text-white"
                 href="/"
              >
                « Home
              </a>
            </span>
          </div>
        </div>
      </div>
      <div class="w-full">
        <p>
          Cruentus suus arto paulatim uredo vorago ager cursus bardus.
        </p>
        <p>
          Infit aliquid clibanus vestigium modi defluo. Talis administratio suggero tumultus asperiores terminatio cito cohibeo sono.
        </p>
        <p>
          Sono valens subito. Debitis teneo maxime ago nostrum tot. Vestigium tandem natus tantillus ager.
        </p>
        <p>
          Trado verbera aperiam aggredior aptus cubitum curriculum libero annus. Tondeo delibero titulus absens. Vicissitudo non basium supellex cras sordeo adamo. Adduco tamdiu demergo animus illo aeger solitudo vulnus.
        </p>
        <p>
          Natus ambulo subseco solvo admiratio textor earum cursim tertius. Denique attonbitus commemoro tutis audentia cur. Capillus veritatis versus aliqua delectus desipio combibo adiuvo carbo allatus. Timor vehemens adimpleo cogito. Fugit quidem abscido deorsum voveo corrupti alo deinde vix congregatio.
        </p>
      </div>
    </div>
  </div>
</div>
`;
